# pixel-office

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI-MATRIX.md  COMPANY-LAYER.md  DECISIONS.md  IDEAS.md  ROADMAP.md  TELEMETRY-CONTRACT.md
pixel_office/: __init__.py  cli.py  doctor.py  hooks.py  server.py
pixel_office/adapters/: __init__.py  agy.py  base.py  claude.py  codex.py  company.py  grok.py  hermes.py  registry.py
pixel_office/company/: __init__.py  autonomy.py  cli_invoke.py  company.py  creativity.py  employee.py  executor_cli.py  factory.py  hr.py  ideas.py  learning.py  meeting.py  memo.py  metrics.py  mode.py  okr.py  po.py  radar.py  roles.py  routing.py  runtime.py  search.py  skills.py  workflows.py
pixel_office/control/: __init__.py  approvals.py  budget.py  deploy.py  envelope.py
pixel_office/scaffold/: __init__.py  builder.py  init_chat.py  manifest.py  templates.py
pixel_office/static/: manifest.webmanifest  office.html  office_plain.html  sw.js
pixel_office/telemetry/: __init__.py  adapters.py  claude_transcript.py  codex_rollout.py  contract.py  grok_chat.py  grok_events.py  hook_events.py  normalize.py  reducer.py  sqlite_source.py  tailer.py  watcher.py
tests/: test_autonomy.py  test_autonomy_extras.py  test_budget.py  test_claude_transcript.py  test_cli.py  test_cli_invoke.py  test_codex_rollout.py  test_company.py  test_company_phase2.py  test_conformance.py  test_contract.py  test_control.py  test_creativity.py  test_doctor.py  test_executor_cli.py  test_executor_prompt.py  test_factory_seeding.py  test_grok_events.py  test_hooks.py  test_hr.py  test_ideas.py  test_initiative.py  test_learning.py  test_meeting.py  test_metrics.py  test_mode.py  test_normalize.py  test_radar.py  test_reducer.py  test_replay.py  test_roles.py  test_roster_serialization.py  test_routing.py  test_routing_skills.py  test_run.py  test_scaffold.py  test_search.py  test_server.py  test_skills.py  test_sqlite_source.py  (+5 more)
tests/fixtures/: claude_basic.expected.json  claude_basic.jsonl
