[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-office"
version = "0.0.1"
description = "Spin up an AI company you can watch — a game-like dashboard driven by CLI telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jutalik" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12"]

[project.scripts]
po = "pixel_office.cli:main"

[tool.setuptools.packages.find]
include = ["pixel_office*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
