[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-office"
version = "0.0.1"
description = "Spin up an AI company you can watch — a game-like dashboard driven by CLI telemetry."
readme = "README.md"
requires-python = ">=3.10"
# NOTE: legacy table form kept deliberately — the PEP 639 SPDX string form emits
# Metadata-Version 2.4, which pip < 24.1 cannot install. Revisit when the pip floor rises.
license = { text = "MIT" }
authors = [{ name = "jutalik" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jutalik/pixel-office"
Repository = "https://github.com/jutalik/pixel-office"
Issues = "https://github.com/jutalik/pixel-office/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "websockets>=12"]

[project.scripts]
po = "pixel_office.cli:main"

[tool.setuptools.packages.find]
include = ["pixel_office*"]

[tool.setuptools.package-data]
pixel_office = ["static/*.html"]

[tool.setuptools.exclude-package-data]
"*" = []

[tool.pytest.ini_options]
testpaths = ["tests"]
